--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.2.0",
-    "react-toastify": "^4.1.0"
+    "react-toastify": "^4.1.0",
+    "serve": "^11.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
